fix overflow

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body{
     color: #333333;
     font-family: OpenSans;
+    overflow-x: hidden;
 }
 
 .target{
